Feature/netlist implement (#7)
* Implement netlist core blueprint
Give default core guidelines for implementing the netlist structure. Use
Factory Method pattern for component creation and provide blueprint for
subclass concrete factory method implementation.

* Finalize netlist structure, generate javadoc.
Add parts that serve to simplify behaviour of netlist, such as different
parser, composers and assemblers of factory subclasses (concrete creator
classes) e.g. DelayComponentComposer, LogicalComponentComposer,
ComponentParser, ConnectionAssembler and so on. Add enums and plethera
of domain exception mappings of checked exceptions. Provide test casses and
(some) javadoc.